The install script

--- a/install
+++ b/install
@@ -7,7 +7,6 @@ RED="$(tput setaf 1)"
 clear
 echo -en "${WHI}"
 cat <<'EOF'
-
 PISTAR-LASTQSO INSTALLAION:
 
 This install script will perform the
@@ -19,17 +18,21 @@ following operations...
     /usr/local/sbin and enable execute
     permission
 
-3.) install the package "figlet" from
+3.) copy the "dxcc.pl" script to
+    /usr/local/bin and enable execute
+    permission
+
+4.) install the package "figlet" from
     the standard repositories using
     "apt-get -y install figlet"
 
-4.) copy the supplemental "ansi_shadow.flf"
+5.) copy the supplemental "ansi_shadow.flf"
     font file to /usr/share/figlet
 
-5.) remount the rootfs as read-only
+6.) remount the rootfs as read-only
 
-Press ENTER to proceed, or Ctrl-C to abort...
 EOF
+echo -en "Press ENTER to proceed, or Ctrl-C to abort... "
 read FOO
 
 echo -e "Beginning install."
@@ -58,11 +61,32 @@ else
   fi
 fi
 
+echo -e "${GRE}Step 3. - Installing the dxcc.pl script...${WHI}"
+if [ ! -f ./dxcc.pl ]
+then
+  echo -e "${RED}\n  Error... dxcc.pl not found in current directory.${WHI}"
+  echo -e "${RED}  Installation failed.\n${WHI}"
+  exit
+else
+  if [ "$(sudo cp ./dxcc.pl /usr/local/bin 2> /dev/null)" ]
+  then
+    echo -e "${RED}\n  Unable to copy script to /usr/local/bin.${WHI}"
+    echo -e "${RED}  Installation failed.\n${WHI}"
+    exit
+  fi
+  if [ "$( sudo chmod +x /usr/local/bin/dxcc.pl 2> /dev/null)" ]
+  then
+    echo -e "${RED}\n  Unable to set execute permission.${WHI}"
+    echo -e "${RED}  Installation failed.\n${WHI}"
+    exit
+  fi
+fi
+
 if [ -n "$(command -v figlet)" ]
 then
-  echo -e "${GRE}Step 3. - Figlet is already installed.  Continuing...${WHI}"
+  echo -e "${GRE}Step 4. - Figlet is already installed.  Continuing...${WHI}"
 else
-  echo -e "${GRE}Step 3. - Installing figlet from repositories...${WHI}"
+  echo -e "${GRE}Step 4. - Installing figlet from repositories...${WHI}"
   sudo apt-get update
   sudo apt-get -y install figlet
   sudo apt-get clean
@@ -76,7 +100,7 @@ then
     echo -e "${RED}  Installation failed.\n${WHI}"
     exit
   else
-    echo -e "${GRE}Step 4. - Installing ansi_shadow font...${WHI}"
+    echo -e "${GRE}Step 5. - Installing ansi_shadow font...${WHI}"
     if [ "$(sudo cp ./ansi_shadow.flf /usr/share/figlet/ansi_shadow.flf 2> /dev/null)" ]
     then
       echo -e "${RED}\n  Unable to copy ansi_shadow.flf to /usr/share/figlet${WHI}"
@@ -85,10 +109,10 @@ then
     fi
   fi
 else
-  echo -e "${GRE}Step 4. - Font file is already installed.  Continuing...${WHI}"
+  echo -e "${GRE}Step 5. - Font file is already installed.  Continuing...${WHI}"
 fi
 
-echo "${GRE}Step 5. - Returning the rootfs filesystem to read-only...${WHI}"
+echo "${GRE}Step 6. - Returning rootfs filesystem to read-only...${WHI}"
 sync ; sync ; sync
 sudo mount -o remount,rw /
 
