--- a/install
+++ b/install
@@ -9,29 +9,21 @@ echo -en "${WHI}"
 cat <<'EOF'
 PISTAR-LASTQSO INSTALLATION:
 
-This install script will perform the
-following operations...
+This install script will perform the following operations...
 
 1.) remount the rootfs as read-write
 
-2.) copy the "pistar-lastqso" script to
-    /usr/local/bin and enable execute
-    permission
+2.) copy "pistar-lastqso" to /usr/local/bin and enable execute permission
 
-3.) copy the "dxcc.pl" script to
-    /usr/local/bin and enable execute
-    permission
+3.) copy "dxcc.pl" script to /usr/local/bin and enable execute permission
 
-4.) install the package "figlet" from
-    the standard repositories using
+4.) install the package "figlet" from the standard repositories using
     "sudo apt-get -y install figlet"
 
-5.) install the package "jq" from
-    the standard repositories using
+5.) install the package "jq" from the standard repositories using
     "sudo apt-get -y install jq"
 
-6.) copy the supplemental "ansi_shadow.flf"
-    font file to /usr/share/figlet
+6.) copy the supplemental "ansi_shadow.flf" font file to /usr/share/figlet
 
 7.) remount the rootfs as read-only
 
